<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory android:title="@string/category_genereal">

        <EditTextPreference
            android:id="@+id/prefApiKey"
            android:dialogMessage="@string/restart_note"
            android:icon="@drawable/ic_key"
            android:key="@string/key_api_key"
            android:title="@string/api_key_title"
            tools:summary="@string/api_key_summary" />

        <EditTextPreference
            android:id="@+id/prefBeaconUuid"
            android:dialogMessage="@string/restart_note"
            android:icon="@drawable/ic_timelapse"
            android:key="@string/key_beacon_uuid"
            android:title="@string/beacon_uuid_title"
            tools:summary="@string/beacon_uuid_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_scan">

        <SwitchPreference
            android:id="@+id/prefBackgroundMode"
            android:defaultValue="false"
            android:icon="@drawable/ic_search"
            android:key="@string/key_background_mode"
            android:summary="@string/background_mode_summary"
            android:title="@string/bg_mode_title" />

        <SwitchPreference
            android:id="@+id/prefNotifications"
            android:defaultValue="false"
            android:dependency="@string/key_background_mode"
            android:icon="@drawable/ic_notifications_colored"
            android:key="@string/key_notification"
            android:summary="@string/notification_summary"
            android:title="@string/notification_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Auto Refresh">
        <SwitchPreference
            android:id="@+id/autoRefresh"
            android:defaultValue="false"
            android:icon="@drawable/ic_autorefresh_gray"
            android:key="@string/key_auto_refresh"
            android:summary="@string/auto_refresh_summary"
            android:title="@string/auto_refresh_title" />

        <ListPreference
            android:id="@+id/autoRefreshInterval"
            android:defaultValue="10"
            android:dependency="@string/key_auto_refresh"
            android:entries="@array/auto_refresh_text"
            android:entryValues="@array/auto_refresh_values"
            android:icon="@drawable/ic_time_gray"
            android:key="@string/key_auto_refresh_interval"
            android:summary="@string/auto_refresh_interval_summary"
            android:title="@string/auto_refresh_interval_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Content Loading">

        <SwitchPreference
            android:id="@+id/prefLocationBasedContent"
            android:defaultValue="false"
            android:icon="@drawable/ic_location_gray"
            android:key="@string/key_location_based_content"
            android:summary="@string/location_based_content_summary"
            android:title="@string/location_based_content_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">

        <ListPreference
            android:id="@+id/snoozeNotifications"
            android:defaultValue="1"
            android:entries="@array/snooze_notifications_text"
            android:entryValues="@array/snooze_notifications_values"
            android:icon="@drawable/ic_snooze_notification_off"
            android:key="@string/key_snooze_notifications"
            android:summary="1 minute"
            android:title="Snooze Notifications" />

        <ListPreference
            android:id="@+id/snoozeContent"
            android:defaultValue="24"
            android:entries="@array/snooze_content_text"
            android:entryValues="@array/snooze_content_values"
            android:icon="@drawable/ic_snooze_content_off"
            android:key="@string/key_snooze_content"
            android:summary="24 hours"
            android:title="Snooze Content" />

    </PreferenceCategory>

</PreferenceScreen>