<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".view.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="@dimen/_190sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textColor="@color/txt_light"
                android:textSize="@dimen/_24sdp" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proximipro"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_40sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/card_bg"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_12sdp">

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/already_have_account"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etApiKey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/input_bg"
                android:ellipsize="end"
                android:hint="@string/enter_api_key"
                android:imeOptions="actionDone"
                android:lines="1"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@color/txt_light" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnSubmit"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/btn_bg"
                android:clickable="true"
                android:elevation="@dimen/_2sdp"
                android:focusable="true"
                android:onClick="submitApiKey"
                android:text="@string/submit"
                android:textStyle="bold"
                app:finalCornerAngle="@dimen/_100sdp"
                app:initialCornerAngle="@dimen/_100sdp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_padding="@dimen/_3sdp"
                app:spinning_bar_width="@dimen/_2sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_48sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvPlatformOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="openPlatformOptions"
            android:padding="@dimen/_8sdp"
            android:text="@string/see_platform_options"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/demo_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/demo_account"
            android:textAlignment="center"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvTryNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="openDemoAccount"
            android:padding="@dimen/_8sdp"
            android:text="@string/try_now"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>