<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".view.ProfileActivity">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_8sdp"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_8sdp"
        android:scaleType="center"
        android:src="@drawable/ic_edit"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily=""
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_32sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClose" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/card_bg"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/tvBirthDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/input_bg"
            android:enabled="false"
            android:hint="@string/enter_your_birth_date"
            android:onClick="openDatePicker"
            android:padding="@dimen/_12sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/gender"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="111dp" />

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:enabled="false"
                android:text="@string/male"
                android:textSize="@dimen/_12sdp" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:enabled="false"
                android:text="@string/female"
                android:textSize="@dimen/_12sdp" />

        </RadioGroup>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTags"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveChanges"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/item_tag" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:elevation="@dimen/_2sdp"
        android:focusable="true"
        android:onClick="saveProfileChanges"
        android:text="@string/save_changes"
        android:visibility="invisible"
        app:finalCornerAngle="@dimen/_100sdp"
        app:initialCornerAngle="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="@android:color/white"
        app:spinning_bar_padding="@dimen/_3sdp"
        app:spinning_bar_width="@dimen/_2sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>